Task 3 Personal Profile

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                 <li>Menjadi MC Gebyar Ramadhan, MC MPLS, MC 17 Agustusan, Tim PPDB</li>
                                 <li>Koordinator tim acara</li>
                                 <li>Koordinator acara graduation</li>
-                                <li>Terseleksi Toeic dengan skors</li>
+                                <li>Terseleksi TOEIC</li>
                                 <li>Juara 2 Membuat Essay antar sekolah</li>
                                 <li>Peserta lomba membuat essay tingkat Jawa Barat</li>
                                 <li>Karang taruna</li>
