Task 3 Personal Profile responsive

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
             <script src="cv.js"></script>
                 
-                <b><div 0px="" 12px="" arial="" color:="" ff0000="" font:="" id="textDestination" margin:="" style="background-color: none; color: white;"></div></b> 
-                
+                <b><div class="ani" 0px="" 12px="" arial="" color:="" ff0000="" font:="" id="textDestination" margin:="" style="background-color: none; color: white;"></div></b> 
+                <div class="art">
                 <p><img src="./img/rmh.png" alt="rmh" style="width: 15px; border-radius: 20px;"> Bandung, Jawa Barat</p>
                 <p><a href="https://mail.google.com/mail/u/0/?tab=rm#inbox"><img src="./img/email1.png" alt="email" style="width: 18px; border-radius: 20px;">yuli45904@gmail.com</a></p>
                 <a href="https://web.whatsapp.com/"><img src="./img/wat.png" alt="wa" style="margin: 20px auto; width: 30px; border-radius: 20px;"></a> 
@@ -38,6 +38,7 @@
                 <a href="https://facebook.com"><img src="./img/fb3.png" alt="fb" style="margin: 20px auto; width: 30px; border-radius: 20px;"></i></a> 
                 <a href="https://instragram.com"><img src="./img/ig3.png" alt="ig" style="margin: 20px auto; width: 30px; border-radius: 20px;"></i></a>
                 <a href="https://github.com/arthamevia"><img src="./img/git.png" alt="git" style="margin: 20px auto; width: 30px; border-radius: 20px;"></i></a>  
+                </div>
                 <hr>
                 <h3 class="bold"><i class="fa fa-linux fa-fw large"></i>Skills</h3><br>
                 <p>HTML</p>
