Task 3 Personal Profile responsive

--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
                 
                 <b><div class="ani" 0px="" 12px="" arial="" color:="" ff0000="" font:="" id="textDestination" margin:="" style="background-color: none; color: white;"></div></b> 
                 <div class="art">
-                <p><img src="./img/rmh.png" alt="rmh" style="width: 15px; border-radius: 20px;"> Bandung, Jawa Barat</p>
-                <p><a href="https://mail.google.com/mail/u/0/?tab=rm#inbox"><img src="./img/email1.png" alt="email" style="width: 18px; border-radius: 20px;">yuli45904@gmail.com</a></p>
+                <img class="log" src="./img/rmh.png" alt="rmh">
+                <p class="ban">Bandung, Jawa Barat</p>
+                <img class="log2" src="./img/email1.png" alt="email">
+                <a class="ban" href="https://mail.google.com/mail/u/0/?tab=rm#inbox">yuli45904@gmail.com</a>
                 <a href="https://web.whatsapp.com/"><img src="./img/wat.png" alt="wa" style="margin: 20px auto; width: 30px; border-radius: 20px;"></a> 
                 <a href="https://linkedin.com/in/yuliyanti-arthamevia-176863250/"><img src="./img/link.png" alt="in" style="margin: 20px auto; width: 30px; border-radius: 20px;"></a>  
                 <a href="https://facebook.com"><img src="./img/fb3.png" alt="fb" style="margin: 20px auto; width: 30px; border-radius: 20px;"></i></a> 
