Task 3 Personal Profile responsive

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="art">
                 <img class="log" src="./img/rmh.png" alt="rmh">
                 <p class="ban">Bandung, Jawa Barat</p>
-                <img class="log2" src="./img/email1.png" alt="email">
+                <img class="log2" src="./img/mail1.png" alt="email">
                 <a class="ban" href="https://mail.google.com/mail/u/0/?tab=rm#inbox">yuli45904@gmail.com</a>
                 <a href="https://web.whatsapp.com/"><img src="./img/wat.png" alt="wa" style="margin: 20px auto; width: 30px; border-radius: 20px;"></a> 
                 <a href="https://linkedin.com/in/yuliyanti-arthamevia-176863250/"><img src="./img/link.png" alt="in" style="margin: 20px auto; width: 30px; border-radius: 20px;"></a>  
