Task 3 Personal Profile responsive

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <div id="home">
     <div class="container">
         <div id="colspan">
-            <img src="./img/uli (2).jpg" alt="uli2">
-            <h4>Yuliyanti Arthamevia</h4>
+            <img class="yul" src="./img/uli (2).jpg" alt="uli2">
+            <h4 class="nama">Yuliyanti Arthamevia</h4>
 
             <script src="cv.js"></script>
                 
