Task 3 Personal Profile responsive

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             <li><a href="#education">Education</a></li>
             <li><a href="#skills">Skil</a></li>
             <li><a href="#project">Project</a></li>
-            <li><a href="#footer">Footer</a></li>
         </ul>
     </nav>
     <div id="home">
@@ -134,7 +133,8 @@
         </div>
     </div>
     </div>
-    <div class="skills" id="skills">
+
+    <div class="skills" id="skills" >
         <div class="a-box">
             <div class="img-container1">
                 <div class="img-inner1">
@@ -233,19 +233,21 @@
         </div>
     </div>
 
+    <span class="baris"></span>
     <div id="project">
     <main class="main">
         <h2>PROJECT</h2> 
         <span class="span4"></span>
         <section class="card-area">
             <!-- Card: project -->
-            <form action=""><input type="date" value="2022-08-09" class="formdate"/></form>
             <section class="card-section">
                 <div class="card">
                     <div class="flip-card">
                         <div class="flip-card__container">
                             <div class="card-front">
                                 <div class="card-front__tp card-front__tp--city">
+                                    
+                                    <form action=""><input type="date" value="2022-08-09" class="formdate"/></form>
                                     <h2 class="card-front__heading">Web Ruang Zis</h2>
                                     <!-- <p class="card-front__text-price">SMK ASSALAAM</p> -->
                                 </div>
@@ -268,13 +270,13 @@
             </section>
 
             <!-- Card: Ski -->
-            <form action=""><input type="date" value="2022-08-09" class="formdate"/></form>
             <section class="card-section">
                 <div class="card">
                     <div class="flip-card">
                         <div class="flip-card__container">
                             <div class="card-front">
                                 <div class="card-front__tp card-front__tp--ski">
+                                    <form action=""><input type="date" value="2022-08-09" class="formdate"/></form>
                                         <h2 class="card-front__heading">FLUTTER</h2>
                                         <!-- <p class="card-front__text-price">SMK ASSALAAM</p> -->
                                 </div>
@@ -296,13 +298,13 @@
             </section>
 
             <!-- Card: Beach -->
-            <form action="" ><input type="date" value="2022-07-07" class="formdate"/></form>
             <section class="card-section">
                 <div class="card">
                     <div class="flip-card">
                         <div class="flip-card__container">
                             <div class="card-front">
                                 <div class="card-front__tp card-front__tp--beach">
+                                    <form action="" ><input type="date" value="2022-07-07" class="formdate"/></form>
                                         <h2 class="card-front__heading">WEB CRUD GURU</h2>
                                         <!-- <p class="card-front__text-price">SMK ASSALAAM</p> -->
                                 </div>
@@ -326,7 +328,7 @@
     </main>
     </div>
 
-    
+    <span class="baris"></span>
     <h2 class="date">Date</h2>
     <div class="container4">
         <div class="content4">
