Task 3 Personal Profile responsive

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                             I study at SMK Assalaam Bandung.
                         </p>
                         <!-- Saya tinggal di Cilebak Rancamanyar jl. citarum Lama, kec.Baleendah Kab. Bandung Jawa Barat.
-                            Saya lahir di Bandung, o5 Juli 2004. Saya sekarang berusia 18 tahun -->
+                            Saya lahir di Bandung, o5 Juli 2004. Saya sekarang berusia 18 tahun Saya mempunyai impian sebagai programmer perempuan -->
                         <p> I live in Cilebak Rancamanyar jl. Citarum Lama, sub-district Baleendah Kab. Bandung West Java.
-                            I was born in Bandung, o5 July 2004. I am now 18 years old.
+                            I was born in Bandung, o5 July 2004. I am now 18 years old, I have a dream as a female programmer.
                         </p>
                     </div>
                     <h2>Education</h2>
@@ -347,8 +347,8 @@
                     <div class="col-sm-12 col-md-6">
                         <h6>UL.ARTH</h6>
                         <h6>Junior Backend Developer</h6>
-                        <p class="text-justify"><b> Saya yuliyanti arthamevia merupakan junior backend developer intern di plabs
-                            saya sekolah di smk assalaam bandung. jurusan rekayasa perangkat lunak dan magang di PLABS.ID
+                        <p class="text-justify"><b> Saya Yuliyanti Arthamevia merupakan Junior Backend Developer Intern di PLABS.ID. 
+                            Saya sekolah di SMK Assalaam Bandung, jurusan Rekayasa Perangkat Lunak.
                         </b></p>
                     </div>
                     <div class="col-6 col-md-3">
